# GitHub_CPP_CMake_Build

./: CMakeLists.txt  Jenkinsfile  README.md
.github/workflows/: build.yml
Documents/: Documents.docx
Documents/Output_Logs & Pngs/: Build Console Log#7.txt
Scripts/: Setup_Repo.bat
include/: hello.h  utils.h
src/: hello.cpp  main.cpp  utils.cpp
tests/: CMakeLists.txt  test_hello.cpp  test_utils.cpp
